--- a/base05/package.json
+++ b/base05/package.json
@@ -12,7 +12,8 @@
   "dependencies": {
     "@huggingface/inference": "^3.3.0",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-markdown": "^9.0.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
