--- a/base09/package.json
+++ b/base09/package.json
@@ -10,8 +10,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "nanoid": "5.0.7",
+    "react": "^18.3.1",
+    "react-confetti": "6.1.0",
+    "react-dom": "^18.3.1",
+    "vite": "latest"
   },
   "devDependencies": {
     "@eslint/js": "^9.19.0",
